; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_r_main.c_R_RenderPlayerView.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_r_main.c_R_RenderPlayerView.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numnodes = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @R_RenderPlayerView(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @R_SetupFrame(i32* %3)
  %5 = call i32 (...) @R_ClearClipSegs()
  %6 = call i32 (...) @R_ClearDrawSegs()
  %7 = call i32 (...) @R_ClearPlanes()
  %8 = call i32 (...) @R_ClearSprites()
  %9 = call i32 (...) @NetUpdate()
  %10 = load i64, i64* @numnodes, align 8
  %11 = sub nsw i64 %10, 1
  %12 = call i32 @R_RenderBSPNode(i64 %11)
  %13 = call i32 (...) @NetUpdate()
  %14 = call i32 (...) @R_DrawPlanes()
  %15 = call i32 (...) @NetUpdate()
  %16 = call i32 (...) @R_DrawMasked()
  %17 = call i32 (...) @NetUpdate()
  ret void
}

declare dso_local i32 @R_SetupFrame(i32*) #1

declare dso_local i32 @R_ClearClipSegs(...) #1

declare dso_local i32 @R_ClearDrawSegs(...) #1

declare dso_local i32 @R_ClearPlanes(...) #1

declare dso_local i32 @R_ClearSprites(...) #1

declare dso_local i32 @NetUpdate(...) #1

declare dso_local i32 @R_RenderBSPNode(i64) #1

declare dso_local i32 @R_DrawPlanes(...) #1

declare dso_local i32 @R_DrawMasked(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
